Add view and create url actions
