# src/requests/apiv1/createurl.go
@@ -1,0 +1,6 @@
+package apiv1
+
+type CreateUrlRequest struct {
+	Label       string `form:"label" binding:"required"`
+	Destination string `form:"destination" binding:"required"`
+}
